# openai-finetuner

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.datasets/: id_map.json
.github/workflows/: ci.yaml
examples/: demo.py
examples/demo/: README.md  main.py
scratch/: analysis_results.csv  analysis_results_1.csv  analysis_results_1000.csv  analysis_results_1250.csv  analysis_results_250.csv  analysis_results_500.csv  analysis_results_750.csv  get_job_ids.py  job_id_to_metrics_list.pkl  metrics_df.csv  model_id_to_job_id.json
src/openai_finetuner/: constants.py  dataset.py  experiment.py  file.py  file_manager.py  interfaces.py  job.py  model.py
src/openai_finetuner/client/openai/: client.py
src/openai_finetuner/client/wrappers/: cache.py
src/openai_finetuner/core/: errors.py  interfaces.py  types.py
src/openai_finetuner/openai/: file.py  job.py
src/openai_finetuner/system/: key.py
tests/: test_dataset.py  test_experiment.py
tests/core/: test_errors.py  test_types.py
